--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Привет Мой Блог!</h1>
 
-  <script src="js/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/user.js"></script>
 </body>
 </html>
