--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Блог</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400,600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Привет Мой Блог!</h1>
+  <h1>Привет Блог!</h1>
 
   <script type="module" src="./js/main.js"></script>
   <script type="module" src="./js/user.js"></script>
